--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
+    "markdown-to-jsx": "^7.7.13",
+    "next": "15.4.6",
+    "openai": "^5.12.2",
+    "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/node": "24.2.1",
+    "@types/react": "19.1.10",
+    "tailwindcss": "^4",
+    "typescript": "5.9.2"
   }
 }
